--- a/extern/sound_sdl/CMakeLists.txt
+++ b/extern/sound_sdl/CMakeLists.txt
@@ -1,44 +1,16 @@
 cmake_minimum_required(VERSION 3.12)
 
-set(CMAKE_C_COMPILER "/usr/bin/gcc")
-set(CMAKE_CXX_COMPILER "/usr/bin/g++")
-
 set(NAME sound_sdl)
 project(${NAME})
 
-set(CMAKE_BUILD_TYPE Release)
-
-set(CMAKE_CXX_STANDARD 14)
-
-
-#list(APPEND CMAKE_MODULE_PATH "$ENV{HOME}/.brew/share/SFML/cmake/Modules/")
-
-#find_package(SFML QUIET COMPONENTS system window graphics network audio)
-#if (NOT SFML_FOUND)
-#    include_directories(${PROJECT_BINARY_DIR}/../../sfml/src/sfml/include)
-#    link_directories(${PROJECT_BINARY_DIR}/../../sfml/src/sfml-build/lib)
-#endif()
-
-link_directories(/usr/lib/)
-link_directories($ENV{HOME}/.brew/lib/)
-
-add_library(
-        ${NAME} MODULE
-
+add_library(${NAME} MODULE
         src/SoundSdl.cpp
-        include/SoundSdl.hpp
-)
+        include/SoundSdl.hpp)
 
 target_link_libraries(${NAME} PRIVATE
-        ${SDL2_LIBRARY} ${SDL2_MIXER_LIBRARIES}
-        )
+        ${SDL2_LIBRARY} ${SDL2_MIXER_LIBRARIES})
+
 target_include_directories(${NAME} PUBLIC ${SDL2_INCLUDE_DIR})
 target_include_directories(${NAME} PUBLIC ${SDL2_MIXER_INCLUDE_DIR})
-
-target_include_directories(
-        ${NAME} PUBLIC
-        $ENV{HOME}/.brew/include
-        ${PROJECT_SOURCE_DIR}/../../incs/
-        ${PROJECT_SOURCE_DIR}/include
-)
+target_include_directories(${NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
