Update INSTALL option CMakeList || REmove all submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,11 @@ elseif (APPLE)
     set(CMAKE_C_COMPILER "/usr/bin/gcc")
     set(CMAKE_CXX_COMPILER "/usr/bin/g++")
 
-    #execute_process(COMMAND $ENV{HOME}/.brew/bin/brew install sdl2)
-    #execute_process(COMMAND $ENV{HOME}/.brew/bin/brew install sdl2_image)
-    #execute_process(COMMAND $ENV{HOME}/.brew/bin/brew install sdl2_mixer)
+    if(INSTALL)
+        execute_process(COMMAND $ENV{HOME}/.brew/bin/brew install sdl2)
+        execute_process(COMMAND $ENV{HOME}/.brew/bin/brew install sdl2_image)
+        execute_process(COMMAND $ENV{HOME}/.brew/bin/brew install sdl2_mixer)
+    endif(INSTALL)
 
     link_directories(/usr/lib/)
     link_directories($ENV{HOME}/.brew/lib/)
