Update DisplaySfml : Itsefl sprite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,9 +66,9 @@ message("SFML_INCLUDE_DIR: ${SFML_INCLUDE_DIR}")
 message("SFML_LIBRARIES: ${SFML_LIBRARIES}")
 
 add_subdirectory(imgui)
-add_subdirectory(extern/display_sdl)
+#add_subdirectory(extern/display_sdl)
 add_subdirectory(extern/display_sfml)
-add_subdirectory(extern/test_glfw)
+#add_subdirectory(extern/test_glfw)
 add_subdirectory(extern/sound_sdl)
 add_subdirectory(extern/sound_sfml)
 
