Update glad submodule

--- a/extern/test_glfw/.gitmodules
+++ b/extern/test_glfw/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "Glitter/Vendor/glad"]
 	path = Glitter/Vendor/glad
 	url = https://github.com/Dav1dde/glad.git
+	branch = c
 [submodule "Glitter/Vendor/glfw"]
 	path = Glitter/Vendor/glfw
 	url = https://github.com/glfw/glfw.git
