--- a/extern/test_glfw/CMakeLists.txt
+++ b/extern/test_glfw/CMakeLists.txt
@@ -53,17 +53,17 @@ source_group("Vendors" FILES ${VENDORS_SOURCES})
 
 add_definitions(-DGLFW_INCLUDE_NONE
         -DPROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\")
-#add_executable(${PROJECT_NAME}
-#${PROJECT_SOURCES} ${PROJECT_HEADERS}
-##${PROJECT_SHADERS}
-#${PROJECT_CONFIGS}
-#${VENDORS_SOURCES})
-
-add_library(${PROJECT_NAME} MODULE
+add_executable(${PROJECT_NAME}
 ${PROJECT_SOURCES} ${PROJECT_HEADERS}
 #${PROJECT_SHADERS}
 ${PROJECT_CONFIGS}
 ${VENDORS_SOURCES})
+
+#add_library(${PROJECT_NAME} MODULE
+#${PROJECT_SOURCES} ${PROJECT_HEADERS}
+##${PROJECT_SHADERS}
+#${PROJECT_CONFIGS}
+#${VENDORS_SOURCES})
 
 target_link_libraries(${PROJECT_NAME} assimp glfw
         ${GLFW_LIBRARIES} ${GLAD_LIBRARIES})
