--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "extern/test_glfw/Glitter/Vendor/glfw"]
 	path = extern/test_glfw/Glitter/Vendor/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "extern/test_glfw/Glitter/Vendor/stb"]
+	path = extern/test_glfw/Glitter/Vendor/stb
+	url = https://github.com/nothings/stb
