--- a/dynamicLibrariesSources/display_glfw/CMakeLists.txt
+++ b/dynamicLibrariesSources/display_glfw/CMakeLists.txt
@@ -13,20 +13,18 @@ source_group("Sources" FILES ${PROJECT_SOURCES})
 source_group("Vendors" FILES ${EXTERN_SOURCES})
 
 add_definitions(-DGLFW_INCLUDE_NONE -DPROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\")
-add_executable(${PROJECT_NAME}
-${PROJECT_SOURCES} ${PROJECT_HEADERS}
-${EXTERN_SOURCES_DISPLAY_GLFW})
-
-#add_library(${PROJECT_NAME} MODULE
+#add_executable(${NAME}
 #${PROJECT_SOURCES} ${PROJECT_HEADERS}
 #${EXTERN_SOURCES_DISPLAY_GLFW})
+
+add_library(${NAME} MODULE
+${PROJECT_SOURCES} ${PROJECT_HEADERS}
+${EXTERN_SOURCES_DISPLAY_GLFW})
 
 set_target_properties(${NAME}
         PROPERTIES
         LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/dynamicLibraries"
-        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tmp")
 
-target_link_libraries(${PROJECT_NAME} assimp glfw
+target_link_libraries(${NAME} assimp glfw Boost::filesystem
         ${GLFW_LIBRARIES} ${GLAD_LIBRARIES})
-set_target_properties(${PROJECT_NAME} PROPERTIES
-        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
