--- a/dynamicLibrariesSources/display_sdl/CMakeLists.txt
+++ b/dynamicLibrariesSources/display_sdl/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(${NAME} MODULE
         src/DisplaySdl.cpp
         include/DisplaySdl.hpp)
 
+target_link_libraries(${NAME} PRIVATE Boost::filesystem)
 target_link_libraries(${NAME} PRIVATE ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES})
 
 target_include_directories(${NAME} PUBLIC ${SDL2_INCLUDE_DIR})
