--- a/dynamicLibrariesSources/display_sfml/CMakeLists.txt
+++ b/dynamicLibrariesSources/display_sfml/CMakeLists.txt
@@ -7,8 +7,8 @@ add_library(${NAME} MODULE
         src/DisplaySfml.cpp
         include/DisplaySfml.hpp)
 
-target_link_libraries(${NAME} PRIVATE
-        sfml-graphics sfml-window sfml-system)
+target_link_libraries(${NAME} PRIVATE Boost::filesystem)
+target_link_libraries(${NAME} PRIVATE sfml-graphics sfml-window sfml-system)
 
 target_include_directories(${NAME} PUBLIC ${SFML_INCLUDE_DIR})
 target_include_directories(${NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
