--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,18 @@
 [submodule "cmake/sdl2-cmake-scripts"]
 	path = cmake/sdl2-cmake-scripts
 	url = https://github.com/tcbrindle/sdl2-cmake-scripts
+[submodule "extern/assimp"]
+	path = extern/assimp
+	url = https://github.com/assimp/assimp.git
+[submodule "extern/glad"]
+	path = extern/glad
+	url = https://github.com/Dav1dde/glad.git
+[submodule "extern/glfw"]
+	path = extern/glfw
+	url = https://github.com/glfw/glfw.git
+[submodule "extern/glm"]
+	path = extern/glm
+	url = https://github.com/g-truc/glm.git
+[submodule "extern/stb"]
+	path = extern/stb
+	url = https://github.com/nothings/stb.git
