--- a/dynamicLibrariesSources/display_glfw/CMakeLists.txt
+++ b/dynamicLibrariesSources/display_glfw/CMakeLists.txt
@@ -3,8 +3,8 @@ set(NAME display_glfw)
 project(${NAME})
 
 #add_definitions(-DGLFW_INCLUDE_NONE -DPROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\")
-add_executable(${NAME} src/main.cpp
-#add_library(${NAME} MODULE
+#add_executable(${NAME} src/main.cpp
+add_library(${NAME} MODULE
         ../../extern/glad/src/glad.c
        src/ActModel.cpp
        src/ActModel.hpp
