Add a lot of fix on disconnection and connection && add keybinding on lobby && change on SnakeClient

--- a/nibblerSources/CMakeLists.txt
+++ b/nibblerSources/CMakeLists.txt
@@ -77,8 +77,8 @@ add_executable(${NAME}
         class/Univers.hpp
         class/ia/Bobby.cpp
         class/ia/Bobby.hpp
-        class/ia/AStar.cpp
-        class/ia/AStar.hpp
+#        class/ia/AStar.cpp
+#        class/ia/AStar.hpp
         class/ia/KStar.cpp
         class/ia/KStar.hpp
 
