--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNIBBLER_ROOT_PROJECT_PATH=\\\"${CMAKE_
 if (WIN32)
     if(MSVC)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
-    else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
-        if(NOT WIN32)
-            set(GLAD_LIBRARIES dl)
-        endif()
     endif()
     find_package(OpenGL 3.3 REQUIRED)
 elseif (UNIX AND NOT APPLE)
@@ -47,6 +42,7 @@ endif ()
 
 if(NOT WIN32)
     set(GLAD_LIBRARIES dl)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wvla -std=c99")
 endif()
 
 find_package(Git QUIET)
